optimize architecture